test/invalid/utf8.art
let _0x80 = "";
let _0xbf = "";
let _2cont = "";
let _3cont = "";
let _4cont = "";
let _5cont = "";
let _6cont = "";
let _7cont = "";
let _64cont = "";
